2008-12-17  Tomas Mraz <t8m@centrum.cz>

	* modules/pam_tty_audit/pam_tty_audit.c (pam_sm_open_session): Do
	not abort on unknown option. Avoid double free of old_status.
	(pam_sm_close_session): Use LOG_DEBUG for restored status message.

	* configure.in: Test for getseuser().
	* modules/pam_selinux/pam_selinux.c (pam_sm_open_session): Call getseuser()
	instead of getseuserbyname() if the function is available.

2008-12-12  Thorsten Kukuk  <kukuk@thkukuk.de>

	* release version 1.0.90

	* libpam_misc/Makefile.am: Increase version number of shared library.
	* libpamc/Makefile.am: Likewise.

2008-12-12  Tomas Mraz <t8m@centrum.cz>

	* modules/pam_tally2/pam_tally2.c (get_tally): Test for EACCES
	instead of EPERM.
	* modules/pam_tally2/pam_tally2.8.xml: Fix documentation.

2008-12-10  Thorsten Kukuk  <kukuk@thkukuk.de>

	* doc/man/pam_item_types_ext.inc.xml: Document PAM_AUTHTOK_TYPE.
	* libpam/pam_end.c (pam_end): Free authtok_type.
	* tests/tst-pam_get_item.c: Add PAM_AUTHTOK_TYPE
	as test case.
	* tests/tst-pam_set_item.c: Likewise.
	* libpam/pam_start.c (pam_start): Initialize xdisplay,
	xauth and authtok_type.
	* libpam/pam_get_authtok.c (pam_get_authtok): Rename "type"
	to "authtok_type".
	* modules/pam_cracklib/pam_cracklib.8.xml: Replace "type=" with
	"authtok_type=".
	* doc/man/pam_get_authtok.3.xml: Document authtok_type argument.
	* modules/pam_cracklib/pam_cracklib.c (pam_sm_chauthtok): Set
	type= argument as PAM_AUTHTOK_TYPE item.
	* libpam/pam_get_authtok.c (pam_get_authtok): If no type
	argument given, use PAM_AUTHTOK_TYPE item.
	* libpam/pam_item.c (pam_get_item): Fetch PAM_AUTHTOK_TYPE item.
	(pam_set_item): Store PAM_AUTHTOK_TYPE item.
	* libpam/pam_private.h: Add authtok_type to pam_handle.
	* libpam/include/security/_pam_types.h (PAM_AUTHTOK_TYPE): New.

2008-12-03  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_access/access.conf.5.xml: Replace
	2001:4ca0 with 2001:db8:: [bug#2356400].

	* doc/man/Makefile.am: Add pam_get_authtok.3.xml.