@@ -34,7 +34,7 @@
         retry=<replaceable>N</replaceable>
       </arg>
       <arg choice="opt">
-        type=<replaceable>STRING</replaceable>
+        authtok_type=<replaceable>STRING</replaceable>
       </arg>
 
     </cmdsynopsis>
@@ -124,15 +124,13 @@
 
         <varlistentry>
           <term>
-            <option>type=<replaceable>STRING</replaceable></option>
+            <option>authtok_type=<replaceable>STRING</replaceable></option>
           </term>
           <listitem>
             <para>
-              The default action is for the module to use the
-              following prompts when requesting passwords:
-              "New UNIX password: " and "Retype UNIX password: ".
-              The default word <emphasis>UNIX</emphasis> can
-              be replaced with this option.
+              See <citerefentry>
+	<refentrytitle>pam_get_authtok</refentrytitle><manvolnum>3</manvolnum>
+      </citerefentry> for more details.
             </para>
           </listitem>
         </varlistentry>
@@ -230,6 +228,9 @@ password     required       pam_unix.so        use_authtok
       </citerefentry>,
       <citerefentry>
 	<refentrytitle>pam</refentrytitle><manvolnum>8</manvolnum>
+      </citerefentry>
+      <citerefentry>
+	<refentrytitle>pam_get_authtok</refentrytitle><manvolnum>3</manvolnum>
       </citerefentry>
     </para>
   </refsect1>
