@@ -1,3 +1,9 @@
+2008-12-18  Thorsten Kukuk  <kukuk@thkukuk.de>
+
+	* modules/pam_pwhistory/pam_pwhistory.c (parse_option): Rename
+	type= option to authtok_type= (because of pam_get_authtok).
+	* modules/pam_pwhistory/pam_pwhistory.8.xml: Likewise.
+
 2008-12-17  Tomas Mraz <t8m@centrum.cz>
 
 	* modules/pam_tty_audit/pam_tty_audit.c (pam_sm_open_session): Do
